# EduPlanBench

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: external_agents.json  local.yaml
data/: .hfignore  README.md
docs/: external_agents.md
eduplanbench/: __init__.py  cli.py  experiments.py  runner.py
eduplanbench/agents/: __init__.py  base.py  bridge_policy.py  external.py
eduplanbench/core/: __init__.py  env.py  io.py  schema.py
eduplanbench/data/: __init__.py  downloaders.py  loaders.py  prepare.py  task_builders.py
eduplanbench/envs/: __init__.py  base.py
eduplanbench/evaluation/: __init__.py  metrics.py  report.py  robustness.py  tables.py
eduplanbench/graphs/: __init__.py  resource_graph.py
eduplanbench/llm/: openai_compatible.py
eduplanbench/simulators/: __init__.py  bkt.py
rawdataset/: README.md
scripts/: build_experiment_tables_compact_xlsx.py  clone_external_agents.py  download_prepared_data_from_hf.py  external_agent_bridge.py  external_agent_bridge_template.py  run_experiment_bundle.py  upload_prepared_data_to_hf.py
tests/: test_smoke.py
